# dados-abertos-camara

./: .env-exemple  .gitignore  .sqlfluff  .user.yml  404.html  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  profiles.yml  pyproject.toml  teste.xlsx
.github/workflows/: CI.yml
2.0 Requisitos e KPIs/: index.html
3.0 Arquitetura/: index.html
4.0 etapas/: index.html
5.0 Resultados/: index.html
6.0 Contratos de dados/: index.html
app/: data_ingestion.py  db_operations.py  dept_pipeline.py  get_api_data.py  landing_zone_data_processing.py  models.py  pipeline.py  testando.py
assets/css/: extra.css
dbt_dados_abertos_camara/: dbt_project.yml  package-lock.yml  packages.yml
dbt_dados_abertos_camara/docs/: homepage.md
dbt_dados_abertos_camara/models/marts/: dim__calendario.sql  dim__deputados.sql  dim__deputados_SCD2.sql  dim__deputados_SCD2.yml  dim__fornecedores.sql  dim__fornecedores.yml  dim__tipo_despesas.sql  dim__tipo_despesas.yml  dim__tipos_documentos.sql  dim__tipos_documentos.yml  dim_tipos_documentos.sql  fato__despesas.sql  fato__despesas.yml  fato_despesas.sql
dbt_dados_abertos_camara/models/raw/: raw__infos_extras.sql  raw__tipo_documentos.sql  raw_landing_zone__deputados.sql  raw_landing_zone__despesas.sql
dbt_dados_abertos_camara/models/staging/: _stg_source.yml  stg__deputados.sql  stg__despesas.sql  stg__historico_deputado.sql  stg__infos_extras.sql  stg__tipo_documentos.sql  stg__tipos_despesas.sql  stg_landing_zone__infos_extras.sql  stg_landing_zone__lz_infos_extras.sql  stg_tipos_despesas.sql
dbt_dados_abertos_camara/seeds/: tipos_documentos.csv
dbt_dados_abertos_camara/tests/: _dim_tests.yml  test_compare_sums_by_id_deputado.sql
docs/: 2.0 Requisitos e KPIs.md  3.0 Arquitetura.md  4.0 etapas.md  5.0 Resultados.md  6.0 Contratos de dados.md  index.md
reports/: dados-abertos.pbip  dados-camara-deputados.pbip
reports/dados-abertos.Report/: .platform  definition.pbir
reports/dados-abertos.SemanticModel/: .platform
reports/dados-abertos.SemanticModel/.pbi/: cache.abf
reports/dados-abertos.SemanticModel/definition/: model.tmdl  relationships.tmdl
reports/dados-abertos.SemanticModel/definition/cultures/: en-US.tmdl  pt-BR.tmdl
reports/dados-abertos.SemanticModel/definition/tables/: Medidas.tmdl  dim__calendario.tmdl  dim__deputados.tmdl  (+4 more)
reports/dados-camara-deputados.Report/: .platform  definition.pbir
reports/dados-camara-deputados.SemanticModel/: .platform  model.bim
reports/dados-camara-deputados.SemanticModel/.pbi/: cache.abf
search/: search_index.json
