[tool.poetry]
name = "dados-abertos-camara"
version = "0.1.0"
description = ""
authors = ["Claudio Pontes <claudiohpontes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
requests = "^2.32.3"
pandas = "^2.2.2"
duckdb = "^1.0.0"
tqdm = "^4.66.4"
pydantic = "^2.7.4"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
