[tool.poetry]
name = "dados-abertos-camara"
version = "0.1.0"
description = ""
authors = ["Claudio Pontes <claudiohpontes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
requests = "^2.32.3"
pandas = "^2.2.2"
duckdb = "^1.0.0"
tqdm = "^4.66.4"
pydantic = "^2.7.4"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
dbt-postgres = "^1.8.2"
taskipy = "^1.12.2"
loguru = "^0.7.2"
mkdocs-material = "^9.5.28"
mkdocstrings = "^0.25.1"
mkdocs = {extras = ["mermaid2"], version = "^1.6.0"}
mkdocs-mermaid2-plugin = "^1.1.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mkdocs = "^1.6.0"
openpyxl = "^3.1.4"
pre-commit = "^3.7.1"
sqlfluff = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = """
isort .
black .
sqlfluff fix dbt_dados_abertos_camara/models
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """
python3 app/data_ingestion.py
cd dbt_dados_abertos_camara
dbt deps
dbt seed
dbt run
dbt test
"""
docker_run = """
python3 app/data_ingestion.py
cd dbt_dados_abertos_camara
dbt deps
dbt seed
dbt run
dbt test
"""
doc = "mkdocs serve"
